--- a/src/main/resources/templates/inicio.html
+++ b/src/main/resources/templates/inicio.html
@@ -13,7 +13,7 @@
 
 <div class="container">
 
-    <form th:action="@{/login/autenticar}" method="post">
+    <form th:action="@{/login/authentication}" method="post">
 
         <div class="mt-5 mb-4">
             <h1>Login</h1>
